--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <span></span>
             </label>
             <div class="wrapper" style="    margin-top: 1.25vh;">
-                <ul class="menu" style="text-align-last: center;">
+                <ul class="menu" style="text-align-last: center; z-index: 25;">
                 <li class="menu-item" style="border-width: thin; border-radius: 10px; padding: 10px; box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;"><a href="index.html"><underline style="color: #03327d;">Home</underline></a></li>
                 <li class="menu-item"><a href="epoxy-oak-wood-river-table.html"><underline style="color: #03327d;">Shop </underline></a></li>
   
