--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="page-content">
             <div>
               <div class="profile-page">
-                <div class="wrapper" style="background-image: url(img/Untitled\ design\ \(9\).png); background-position: center;
+                <div class="wrapper" style="background-image: url(img/IMG_3979.jpeg); background-position: center;
                 background-size: cover; background-repeat: no-repeat;  margin: -10px; border-color: #14559c; height: 90vh;">
                   <div class="page-header page-header-small" filter-color="green">
                     <div class="container">
@@ -104,7 +104,7 @@
                         <p style="color: #03327d;"><img src=""></p>
                         <a  class="btn btn-primary smooth-scroll mr-2 aos-init aos-animate" style="border: solid; background-image: url(img/Woodworkback.png);" href="epoxy-oak-wood-river-table.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Custom Design</a>
                         <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #03327d;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Shop all</a>
-                        <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #00183e;" href="shop.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Subscribe 10% Off!</a>
+                        <a  class="btn btn-primary aos-init aos-animate" style="border: solid; background-color: #00183e;" href="epoxy-oak-wood-river-tablecopy.html" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Subscribe 10% Off!</a>
 
                       </div>
                     <div class="section" style="padding-top: 80vh; justify-content: center; ">
@@ -124,6 +124,53 @@
                 </div>
             </div>
         </div>
+
+            <!-- ======= Counts Section ======= -->
+    <section id="counts" class="counts">
+        <div class="section-title">
+          <h2>Results Driven</h2>
+        </div>
+              <div class="container" data-aos="fade-up">
+  
+          <div class="row">
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="count-box">
+                <i class="bi bi-people"></i>
+                <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Active Clients</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+              <div class="count-box">
+                <i class="bi bi-journal-richtext"></i>
+                <span data-purecounter-start="0" data-purecounter-end="52" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Projects</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+              <div class="count-box">
+                <i class="bi bi-boxes"></i>
+                <span data-purecounter-start="0" data-purecounter-end="8825" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Hours Of Support</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+              <div class="count-box">
+                <i class="bi bi-clipboard-data"></i>
+                <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Combined Turnover (£m)</p>
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Counts Section -->
+  
 
         <!-- Services Section -->
             <section id="services" style="padding-bottom:75px; padding-top:75px;">
@@ -275,7 +322,7 @@
                     <div class="row" style="justify-content: center;">
                         <div class="col-sm-4">
                             <div class="team-member">
-                                <img src="img/tommo.webp" class="img-responsive img-circle" alt="">
+                                <img src="img/Tompic.jpeg" class="img-responsive img-circle" alt="">
                                 <h4>Tom Southern</h4>
                                 <p class="text-muted">Lead Designer</p>
                                 <p class="text-muted">Co-founder</p>
@@ -291,7 +338,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="team-member" >
-                                <img src="img/max.webp" class="img-responsive img-circle" alt="">
+                                <img src="img/maxpic.jpeg" style="height: 350px;" class="img-responsive img-circle" alt="">
                                 <h4>Max Worsencroft</h4>
                                 <p class="text-muted">Lead Operations Control</p>
                                 <p class="text-muted">Co-founder</p>
