--- a/faq.html
+++ b/faq.html
@@ -240,13 +240,13 @@
         
 
 <!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.barfiller.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/faq.js"></script>
+<script src="assets/js/jquery-3.3.1.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.barfiller.js"></script>
+<script src="assets/js/jquery.slicknav.js"></script>
+<script src="assets/js/jquery.nicescroll.min.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="assets/js/faq.js"></script>
 
 <script>
     const list = document.querySelectorAll('.list');
