--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -365,12 +365,12 @@ and such processing is carried out by automated means, you have the right to rec
     
     
         <!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.barfiller.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/main.js"></script>
+<script src="assets/js/jquery-3.3.1.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.barfiller.js"></script>
+<script src="assets/js/jquery.slicknav.js"></script>
+<script src="assets/js/jquery.nicescroll.min.js"></script>
+<script src="assets/js/main.js"></script>
 
 <script>
     const list = document.querySelectorAll('.list');
